crates/fig-parser/tests/snapshots/integration_tests__expressions__arithmetic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: arithmetic_ops
        generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: add
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Add
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: sub
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Subtract
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: mul
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Multiply
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: div
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Divide
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: mod_
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: Modulo
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Pass
