crates/fig-parser/tests/snapshots/integration_tests__expressions__bitwise.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: bitwise_ops
        generic_params: []
        self_param: ~
        params:
          - name: a
            ty: U32
          - name: b
            ty: U32
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: band
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: BitwiseAnd
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: bor
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: BitwiseOr
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: bxor
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: BitwiseXor
                  rhs:
                    Path:
                      segments:
                        - b
                      generic_args: []
          - Let:
              annotations: []
              name: shl
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: ShiftLeft
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Let:
              annotations: []
              name: shr
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                      generic_args: []
                  op: ShiftRight
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Pass
