crates/fig-parser/tests/snapshots/integration_tests__expressions__chained_postfix.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: complex_postfix
        generic_params: []
        self_param: ~
        params:
          - name: v
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    segments:
                      - Vec
                    generic_args:
                      - I32
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: len
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - v
                          generic_args: []
                      field: len
                      is_propagating: false
                  args: []
                  is_propagating: false
          - Let:
              annotations: []
              name: item
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - v
                          generic_args: []
                      field: get
                      is_propagating: false
                  args:
                    - IntegerLiteral:
                        base: Decimal
                        digits: "0"
                        suffix: ~
                  is_propagating: false
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - v
                        generic_args: []
                    field: push
                    is_propagating: false
                args:
                  - IntegerLiteral:
                      base: Decimal
                      digits: "42"
                      suffix: ~
                is_propagating: false
          - Pass
