crates/fig-parser/tests/snapshots/integration_tests__expressions__index_suffix.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: index_ops
        generic_params: []
        self_param: ~
        params:
          - name: arr
            ty:
              Array:
                element_type: I32
                size: ~
          - name: idx
            ty: USize
        return_types:
          - Ok
      body:
        statements:
          - Let:
              annotations: []
              name: first
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                      generic_args: []
                  index:
                    IntegerLiteral:
                      base: Decimal
                      digits: "0"
                      suffix: ~
          - Let:
              annotations: []
              name: i
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                      generic_args: []
                  index:
                    Path:
                      segments:
                        - idx
                      generic_args: []
          - Let:
              annotations: []
              name: computed
              ty: ~
              value:
                Index:
                  object:
                    Path:
                      segments:
                        - arr
                      generic_args: []
                  index:
                    BinaryOp:
                      lhs:
                        Path:
                          segments:
                            - idx
                          generic_args: []
                      op: Add
                      rhs:
                        IntegerLiteral:
                          base: Decimal
                          digits: "1"
                          suffix: ~
          - Pass
