crates/fig-parser/tests/snapshots/integration_tests__expressions__method_call.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name: Counter
      generic_params: []
      requires: []
      fields:
        - name: count
          ty: I32
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Counter
          generic_args: []
        name: increment
        generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Ok
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          segments:
            - Counter
          generic_args: []
        name: get
        generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: use_counter
        generic_params: []
        self_param: ~
        params:
          - name: c
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    segments:
                      - Counter
                    generic_args: []
        return_types:
          - Ok
      body:
        statements:
          - Expression:
              Call:
                callee:
                  FieldAccess:
                    object:
                      Path:
                        segments:
                          - c
                        generic_args: []
                    field: increment
                    is_propagating: false
                args: []
                is_propagating: false
          - Let:
              annotations: []
              name: v
              ty: ~
              value:
                Call:
                  callee:
                    FieldAccess:
                      object:
                        Path:
                          segments:
                            - c
                          generic_args: []
                      field: get
                      is_propagating: false
                  args: []
                  is_propagating: false
          - Pass
